--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 .idea/
 
 # Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# Generated files
+dist/
