--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,7 @@
 {
   "env": {
     "es6": true,
-    "browser": false,
-    "node": true,
-    "mocha": true
+    "node": true
   },
   "parser": "babel-eslint",
   "ecmaFeatures": {
@@ -31,16 +29,17 @@
     "globalReturn": false,
     "jsx": false,
     "experimentalObjectRestSpread": false
-  }
+  },
   "extends": "eslint:recommended",
   "rules": {
-    "indent": [2, 4],
-    "quotes": [2, "single"],
-    "linebreak-style": [2, "unix"],
-    "semi": [2, "always"],
+    //
+    // Possible Errors
+    //
+    // The following rules point out areas where you might have made mistakes.
+    //
     "comma-dangle": [2, "never"],
     "no-cond-assign": [2, "except-parens"],
-    "no-console": 2,
+    "no-console": 0, // disabled for programming a Node CLI application
     "no-constant-condition": 2,
     "no-control-regex": 2,
     "no-debugger": 2,
@@ -61,10 +60,10 @@
     "no-obj-calls": 2,
     "no-regex-spaces": 2,
     "no-sparse-arrays": 2,
+    "no-unexpected-multiline": 2,
     "no-unreachable": 2,
     "use-isnan": 2,
     "valid-jsdoc": [2, {
-      "requireReturn": false,
       "prefer": {
         "virtual": "abstract",
         "augments": "extends",
@@ -82,22 +81,32 @@
         "argument": "param",
         "arg": "param",
         "prop": "property",
-        "returns": "return",
+        "return": "return",
         "exception": "throws"
-      }
+      },
+      "requireReturn": false,
+      "requireParamDescription": true,
+      "requireReturnDescription": true,
+      "requireReturnType": true
     }],
     "valid-typeof": 2,
-    "no-unexpected-multiline": 2,
+
+    //
+    // Best Practices
+    //
+    // These are rules designed to prevent you from making mistakes.
+    // They either prescribe a better way of doing something or help you avoid footguns.
+    //
     "accessor-pairs": 2,
     "block-scoped-var": 2,
-    "complexity": [2, 8],
+    "complexity": [2, 3],
     "consistent-return": 2,
     "curly": 2,
     "default-case": 2,
+    "dot-location": [2, "property"],
     "dot-notation": [2, {
       "allowKeywords": true
     }],
-    "dot-location": [2, "property"],
     "eqeqeq": 2,
     "guard-for-in": 2,
     "no-alert": 2,
@@ -111,7 +120,10 @@
     "no-extra-bind": 2,
     "no-fallthrough": 2,
     "no-floating-decimal": 2,
-    "no-implicit-coercion": 0,
+    "no-implicit-coercion": [1, {
+      "boolean": false,
+      "number": true,
+      "string": true}],
     "no-implied-eval": 2,
     "no-invalid-this": 0,
     "no-iterator": 2,
@@ -121,7 +133,7 @@
     "no-multi-spaces": [2, {
       "exceptions": {
         "Property": false,
-        "VariableDeclarator": true,
+        "VariableDeclarator": false,
         "ImportDeclaration": true
       }
     }],
@@ -129,11 +141,11 @@
     "no-native-reassign": 2,
     "no-new-func": 2,
     "no-new-wrappers": 2,
-    "no-new": 0,
+    "no-new": 2,
     "no-octal-escape": 2,
     "no-octal": 2,
-    "no-param-reassign": 0,
-    "no-process-env": 2,
+    "no-param-reassign": 2,
+    "no-process-env": 0, // disabled for programming a Node CLI application
     "no-proto": 2,
     "no-redeclare": [2, {
       "builtinGlobals": true
@@ -143,13 +155,15 @@
     "no-self-compare": 2,
     "no-sequences": 2,
     "no-throw-literal": 2,
-    "no-unused-expressions": 2,
+    "no-unused-expressions": [2, {
+      "allowShortCircuit": true,
+      "allowTernary": true
+    }],
     "no-useless-call": 2,
     "no-useless-concat": 2,
     "no-void": 2,
-    "no-warning-comments": 2,
     "no-warning-comments": [1, {
-      "terms": ["todo", "fixme", "xxx", "warning", "attention"],
+      "terms": ["todo", "fixme", "xxx", "warning", "attention", "tbd"],
       "location": "anywhere"
     }],
     "no-with": 2,
@@ -157,23 +171,60 @@
     "vars-on-top": 2,
     "wrap-iife": [2, "outside"],
     "yoda": [2, "never"],
+
+    //
+    // Strict Mode
+    //
+    // These rules relate to using strict mode.
+    //
     "strict": 2,
+
+    //
+    // Variables
+    //
+    // These rules have to do with variable declarations.
+    //
     "init-declarations": [2, "always"],
     "no-catch-shadow": 2,
     "no-delete-var": 2,
     "no-label-var": 2,
     "no-shadow-restricted-names": 2,
     "no-shadow": [2, {
-      "builtinGlobals": false
+      "builtinGlobals": true,
+      "hoist": "functions",
+      "allow": []
     }],
     "no-undef-init": 0,
     "no-undef": 2,
     "no-undefined": 2,
     "no-unused-vars": 2,
     "no-use-before-define": 2,
+
+    //
+    // Node.js and CommonJS
+    //
+    // These rules are specific to JavaScript running on Node.js or using CommonJS in the browser.
+    //
+    "callback-return": [2, ["callback", "cb"]],
+    "global-require": 2,
+    "handle-callback-err": 2,
+    "no-mixed-requires": 1,
+    "no-new-require": 2,
+    "no-path-concat": 2,
+    "no-process-exit": 2,
+    "no-restricted-modules": 0,
+    "no-sync": 0,
+
+    //
+    // Stylistic Issues
+    //
+    // These rules are purely matters of style and are quite subjective.
+    //
     "array-bracket-spacing": [2, "never"],
     "block-spacing": [2, "always"],
-    "brace-style": [2, "1tbs"],
+    "brace-style": [2, "1tbs", {
+      "allowSingleLine": false
+    }],
     "camelcase": [2, {
       "properties": "always"
     }],
@@ -194,31 +245,45 @@
       "exceptions": ["i", "j", "$"]
     }],
     "id-match": 0,
+    "indent": [2, 4],
+    "jsx-quotes": 0,
     "key-spacing": [2, {
       "beforeColon": false,
       "afterColon": true
     }],
+    "linebreak-style": [2, "unix"],
     "lines-around-comment": [2, {
       "beforeBlockComment": true,
+      "beforeLineComment": true,
       "allowBlockStart": true,
       "allowObjectStart": true
     }],
+    "max-depth": [2, 10],
+    "max-len": [2, 80, 2, {
+      "ignoreComments": true,
+      "ignoreUrls": true}],
     "max-nested-callbacks": [2, 4],
+    "max-params": [2, 4],
+    "max-statements": 0,
     "new-cap": [2, {
       "newIsCap": true,
-      "capIsNew": false,
-      "properties": false
+      "capIsNew": true,
+      "properties": true
     }],
     "new-parens": 2,
     "newline-after-var": [2, "always"],
     "no-array-constructor": 2,
+    "no-bitwise": 1,
     "no-continue": 2,
     "no-inline-comments": 0,
     "no-lonely-if": 2,
     "no-mixed-spaces-and-tabs": 2,
     "no-multiple-empty-lines": 2,
+    "no-negated-condition": 0,
     "no-nested-ternary": 2,
     "no-new-object": 2,
+    "no-plusplus": 0,
+    "no-restricted-syntax": 0,
     "no-spaced-func": 2,
     "no-ternary": 0,
     "no-trailing-spaces": 2,
@@ -232,19 +297,26 @@
     }],
     "operator-assignment": [2, "always"],
     "operator-linebreak": [2, "after"],
-    "padded-blocks": 0,
+    "padded-blocks": [2, "never"],
     "quote-props": [2, "as-needed"],
+    "quotes": [2, "single", "avoid-escape"],
+    "require-jsdoc": [2, {
+      "require": {
+        "FunctionDeclaration": true,
+        "MethodDefinition": false,
+        "ClassDeclaration": false
+      }
+    }],
     "semi-spacing": [2, {
       "before": false,
       "after": true
     }],
+    "semi": [2, "always"],
     "sort-vars": 0,
     "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, {
-      "anonymous": "always",
-      "named": "never"
-    }],
+    "space-before-function-paren": [2, "always"],
+    "space-before-keywords": [2, "always"],
     "space-in-parens": [2, "never"],
     "space-infix-ops": [2, {
       "int32Hint": true
@@ -259,6 +331,13 @@
       "markers": ["/", "global"]
     }],
     "wrap-regex": 0,
+
+    //
+    // ECMAScript 6
+    //
+    // These rules are relevant to ES6 environments.
+    //
+    "arrow-body-style": [2, "as-needed"],
     "arrow-parens": [2, "always"],
     "arrow-spacing": [2, {
       "before": true,
@@ -266,6 +345,7 @@
     }],
     "constructor-super": 2,
     "generator-star-spacing": [2, "after"],
+    "no-arrow-condition": 2,
     "no-class-assign": 2,
     "no-const-assign": 2,
     "no-dupe-class-members": 2,
@@ -273,18 +353,13 @@
     "no-var": 2,
     "object-shorthand": [2, "always"],
     "prefer-arrow-callback": 0,
-    "prefer-const": 1,
-    "prefer-spread": 2,
+    "prefer-const": 2,
+
     "prefer-reflect": [2, {
       "exceptions": ["delete"]
     }],
+    "prefer-spread": 2,
     "prefer-template": 2,
-    "require-yield": 2,
-    "max-depth": [2, 10],
-    "max-len": 0,
-    "max-params": [2, 4],
-    "max-statements": 0,
-    "no-bitwise": 0,
-    "no-plusplus": 2
-  },
+    "require-yield": 2
+  }
 }
