--- a/.eslintrc
+++ b/.eslintrc
@@ -256,7 +256,8 @@
       "beforeBlockComment": true,
       "beforeLineComment": true,
       "allowBlockStart": true,
-      "allowObjectStart": true
+      "allowObjectStart": true,
+      "allowArrayStart": true
     }],
     "max-depth": [2, 10],
     "max-len": [2, 80, 2, {
@@ -315,7 +316,7 @@
     "sort-vars": 0,
     "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, "always"],
+    "space-before-function-paren": [2, "never"],
     "space-before-keywords": [2, "always"],
     "space-in-parens": [2, "never"],
     "space-infix-ops": [2, {
