--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "babel-cli": "^6.3.17",
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
-    "eslint": "^1.10.3",
-    "onchange": "^2.0.0"
+    "chokidar-cli": "^1.2.0",
+    "eslint": "^1.10.3"
   },
   "scripts": {
     "build": "mkdir -p dist && npm run -s lint && npm run -s compile",
     "compile": "echo 'Compile...' && babel --presets es2015 lib/ --out-dir dist/ && chmod +x dist/runn.js",
     "lint": "echo 'Lint...' && eslint lib/** -c .eslintrc",
     "prepublish": "npm run build",
-    "watch": "onchange 'lib/*.js' -- npm run watch:command",
+    "watch": "chokidar 'lib/*.js' -c 'npm run watch:command'",
     "watch:command": "npm run -s lint && echo 'Success: no lint errors' || true && (npm run -s compile && echo 'Output...' && runn)"
   },
   "dependencies": {
