added optional parameters

--- a/.eslintrc
+++ b/.eslintrc
@@ -81,7 +81,7 @@
         "argument": "param",
         "arg": "param",
         "prop": "property",
-        "return": "return",
+        "returns": "return",
         "exception": "throws"
       },
       "requireReturn": false,
@@ -263,7 +263,7 @@
     "max-len": [2, 100, 2, {
       "ignoreComments": true,
       "ignoreUrls": true,
-      "ignorePattern": "(R|r)egexp[A-Z]\w* = " // disable for assignments of regular expressions
+      "ignorePattern": "(R|r)egexp(?:[A-Z]\\w* = )?" // disable for assignments of regular expressions
     }],
     "max-nested-callbacks": [2, 4],
     "max-params": [2, 4],
